# secret-hitler-player

./: .gitignore  README.md  annotate.sh  config-5llm.yaml  config-human.yaml  config-minimal.yaml  config.yaml  deception.sh  human.sh  llamacpp.sh  persuasion_cialdini.jsonl  persuasion_sh.jsonl  pyproject.toml  random-sh.sh  rule-sh.sh  sim.sh  tspo.sh  tspo2.sh  tspo2max.sh  tspo4.sh  tspomin.sh  vllm-gptoss.sh  vllm-sh.sh  vllm.sh  vllmA-DeepSeek.sh  vllmA-Kimi.sh  vllmA-Qwen.sh  vllmA.sh
annotation/: evaluate_annotations.py  evaluation_results_llama_ann.json  evaluation_results_replay_data_ann.json  persuasion_annotation.py
annotation/Gemma312B/: AcidicUnbecomingSassyKangarooRemake13_xhr_data-chat-annotated.json  (+19 more)
crawl/: analyze.py  clean_replay_data.py  dump.py  gameids.txt  scrape.py
deception-rate/: deception.py
eval/: abliteration_dumbbell.py  aggregate_tokens.py  agreeableness.py  approval_line_chart.py  compare_actions.py  deception_analysis.py  decisions.py  evaluate_humans.py  extract_actions.py  game_ending_stacked.py  gamestats.py  gsir_diverging.py  gsir_vs_winrate.py  heatmap-spider.py  heatmap.py  logos  model_comparison-single.py  model_comparison.py  parse_annotation.py  player1.py  plot_comparison.py  plot_config.py  plot_player1.py  plots  policy_progression.py  questionaire.py  reasoning.py  retroactive_stateeval.py  ria.py  role_id_speed.py  stateeval_plot.py  stateeval_plot_max.py  vote_analyzer.py
simulator/: HitlerFactory.py  HitlerGame.py  HitlerGameState.py  HitlerLogging.py  config_loader.py
strategy_docs/: tartanllama.md
(+3119 files in other folders)
