[project]
name = "secret-hitler-player"
version = "0.1.0"
description = "secret-hitler-player"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.7.0",
    "huggingface-hub>=0.35.1",
    "matplotlib>=3.10.5",
    "openai>=1.99.3",
    "pandas>=2.3.1",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "selenium>=4.34.2",
    "selenium-wire>=5.1.0",
    "setuptools>=79.0.1",
    "tqdm>=4.67.1",
    "vllm>=0.10.2",
]   
